DEV6_Componentslist/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <description>Do not change. Updated by automatic processes.</description>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <description>Do not change. Updated by automatic processes.</description>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Naming_Exclusions__c</fullName>
        <description>Determines which household names this contact is NOT included as part of.</description>
        <inlineHelpText>Determines which household names this contact is NOT included as part of.</inlineHelpText>
        <label>Naming Exclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household__c.Name</fullName>
                </value>
                <value>
                    <fullName>Household__c.Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Household__c.Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYearHH__c</fullName>
        <description>Formula:  Total Gifts Last Year on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__OppAmountLastYear__c,
npo02__Household__r.npo02__OppAmountLastYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYearHH__c</fullName>
        <description>Formula:  Total Gifts This Year on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__OppAmountThisYear__c,
npo02__Household__r.npo02__OppAmountThisYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types. Do not update, updated by automatic process.</description>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Last_Year__c</fullName>
        <inlineHelpText>Total soft credit amount last year.</inlineHelpText>
        <label>Soft Credit Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_This_Year__c</fullName>
        <inlineHelpText>Total soft credit amount this year</inlineHelpText>
        <label>Soft Credit This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Total__c</fullName>
        <inlineHelpText>Total amount in soft credits for this Contact&apos;s lifetime. Defined in the Household Settings tab.</inlineHelpText>
        <label>Soft Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Two_Years_Ago__c</fullName>
        <inlineHelpText>Total soft credit amount two years ago.</inlineHelpText>
        <label>Soft Credit Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account.  Deprecated; replaced by HouseholdsSettings npo02__Household_Rules__c</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR-DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Individual Contacts</fullName>
                </value>
                <value>
                    <fullName>All New or Edited Contacts</fullName>
                </value>
                <value>
                    <fullName>No Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Total_Household_Gifts__c</fullName>
        <description>Formula:  Total Gifts on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__TotalOppAmount__c,
npo02__Household__r.npo02__TotalOppAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Address_Verification_Status__c</fullName>
        <description>The verification status of the current Address. If this Address requires verification, navigate to the current Address record and select Verify Address.  Consult the Power of Us Hub documentation for more information on Address Verification..</description>
        <formula>npsp__Current_Address__r.npsp__Verification_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this address requires verification, click the Verify Address button at the top of the Address page. Consult the Help documentation in the Power of Us Hub for more information.</inlineHelpText>
        <label>Address Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Batch that this Contact was created in.</description>
        <inlineHelpText>lookup to the Batch that this contact was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the current Address record for this Contact. NPSP populates the Contact&apos;s Mailing Address field with the street, city, state, and postal code from the current Address record.</description>
        <inlineHelpText>The current Address that the Contact&apos;s mailing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>npsp__Address__c.npsp__Household_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact&apos;s household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>npsp__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Contact is deceased. When selected, NPSP excludes this Contact from Household Naming (unless this Contact is the only one in the Household) and from standard email and phone lists.</description>
        <inlineHelpText>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Contact does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists. When selected, NPSP excludes this Contact from Opportunity Acknowledgements.</description>
        <inlineHelpText>When selected, this option excludes the contact from emails and phone calls.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Formal Greeting (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Formal Greeting.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Informal Greeting (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Name (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s earliest soft credit.</description>
        <inlineHelpText>The amount of the earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s earliest soft credit.</description>
        <inlineHelpText>The date of the earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__HHId__c</fullName>
        <description>Holds the Id of the Household record (either Household Account, or Household object) this Contact is currently associated with (read only).</description>
        <formula>if(Account.npe01__SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))</formula>
        <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
        <label>HHId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s largest soft credit.</description>
        <inlineHelpText>The amount of the largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s largest soft credit.</description>
        <inlineHelpText>The date of the largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s most recent soft credit.</description>
        <inlineHelpText>The amount of the most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s most recent soft credit.</description>
        <inlineHelpText>The date of the most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_N_Days__c</fullName>
        <description>The number of soft credits attributed to this Contact that closed in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
        <inlineHelpText>The number of soft credits, closed in the last number of days defined in NPSP Settings.</inlineHelpText>
        <label>Number of Soft Credits Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_Year__c</fullName>
        <description>The number of soft credits attributed to this Contact in the previous calendar year.</description>
        <inlineHelpText>The number of soft credits last year.</inlineHelpText>
        <label>Number of Soft Credits Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_This_Year__c</fullName>
        <description>The number of soft credits attributed to this Contact this calendar year.</description>
        <inlineHelpText>The number of soft credits this year.</inlineHelpText>
        <label>Number of Soft Credits This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Two_Years_Ago__c</fullName>
        <description>The number of soft credits attributed to this Contact two calendar years ago.</description>
        <inlineHelpText>The number of soft credits 2 years ago.</inlineHelpText>
        <label>Number of Soft Credits Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits__c</fullName>
        <description>The total number of soft credits attributed to this Contact.</description>
        <inlineHelpText>The number of soft credits.</inlineHelpText>
        <label>Number of Soft Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account marked as Primary in this Contact&apos;s list of Organization Affiliations.</description>
        <inlineHelpText>Used to track the account of the contact&apos;s Organization Affiliation record that is marked primary.</inlineHelpText>
        <label>Primary Affiliation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Use.  Use Organization Affiliations.</relationshipLabel>
        <relationshipName>PrimaryAffiliatedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <description>Indicates if this Contact is designated as the Primary Contact on their Account (read only).</description>
        <formula>Account.npe01__One2OneContact__c = Id</formula>
        <inlineHelpText>This is is checked if the user is the Primary Contact on their Account.  The Primary Contact can be edited on the Account.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Soft_Credit_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount of soft credit attributed to this Contact in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
        <inlineHelpText>The total amount of Soft Credit, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Soft Credit Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP will not sync this Contact&apos;s address with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact.</description>
        <inlineHelpText>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</inlineHelpText>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>npe01__HomeEmail__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contact</label>
    </listViews>
    <listViews>
        <fullName>AllVolunteers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Volunteer</value>
        </filters>
        <label>All Volunteers</label>
    </listViews>
    <listViews>
        <fullName>All_Clients</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Clients</value>
        </filters>
        <label>All Clients</label>
    </listViews>
    <listViews>
        <fullName>All_Parents</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>npo02__TotalMembershipOppAmount__c</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Clients</value>
        </filters>
        <label>All Parents</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Practitioners</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>npe01__HomeEmail__c</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Practitioner</value>
        </filters>
        <label>All Practitioners</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Companions</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Companion</value>
        </filters>
        <label>All Companions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>gaid__AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>gaid__BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>gaid__MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>gaid__NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>gaid__NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Clients</fullName>
        <active>true</active>
        <description>A contact representing someone who will attend a course</description>
        <label>Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Companion</fullName>
        <active>true</active>
        <description>A contact representing someone who will accompany a client on a course</description>
        <label>Companion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Practitioner</fullName>
        <active>true</active>
        <description>A contact representing a course practitioner</description>
        <label>Practitioner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer</fullName>
        <active>true</active>
        <description>Volunteer assigned to branches</description>
        <label>Volunteer</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contact_Preferred_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( npe01__Preferred_Email__c ,&quot;&quot;),
OR(
LEN(npe01__AlternateEmail__c  )&gt;0,
LEN(npe01__WorkEmail__c )&gt;0,
LEN(npe01__HomeEmail__c  )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__Preferred_Email__c</errorDisplayField>
        <errorMessage>Please select a Preferred Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Preferred_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(npe01__PreferredPhone__c ,&quot;&quot;),
OR(
 LEN(MobilePhone)&gt;0,
 LEN( npe01__WorkPhone__c)&gt;0,
 LEN( OtherPhone )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__PreferredPhone__c</errorDisplayField>
        <errorMessage>Please select a Preferred Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sort_Code_validation</fullName>
        <active>true</active>
        <errorConditionFormula>Sort_Code__c != null &amp;&amp; NOT (REGEX(  Sort_Code__c , &quot;[&lt;|&gt;]?[0-9]+&quot;) )</errorConditionFormula>
        <errorMessage>Numbers only allow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Account_number</fullName>
        <active>false</active>
        <description>Validation_Account_number</description>
        <errorConditionFormula>Account_Number__c != null &amp;&amp; NOT (REGEX( Account_Number__c, &quot;[&lt;|&gt;]?[0-9]+&quot;))</errorConditionFormula>
        <errorDisplayField>Account_Number__c</errorDisplayField>
        <errorMessage>Numbers only allowed</errorMessage>
    </validationRules>
</CustomObject>